# horses3d

./: .gitignore  CITATION.cff  CONTRIBUTORS.md  LICENSE  LICENSE.md  Makefile.nslite3d  NOTICE.md  README.md  README.txt  REFERENCES.md  Readme.txt  configure.sh  index.html  modules.json  search.html
Solver/: CMakeLists.txt  Makefile  Makefile.in  Makefile.nslite3d  Readme.txt  configure  configure.sh  distclean.cmake  horses2Others.convert  horsesConverter.convert  make.dep  make.deps  make.inc.example
Solver/cmake/Modules/: FindMKL.cmake  FindPETSC.cmake  SetCompileFlag.cmake  SetFortranFlags.cmake
Solver/src/: CMakeLists.txt  HORSES3DMain.f90  horsesf90.in.cmake
Solver/src/AcousticSolver/: Makefile  SpatialDiscretization.f90  main.f90
Solver/src/Approximation/: DGSEMClass.f90  DGViscousDiscretization.f90  FASMultigridClass.f90  Implicit_JF.f90  ProlongToFaces.f90  SpatialDiscretization.f90  TimeIntegrator.f90
Solver/src/CahnHilliardSolver/: AnalyticalJacobian.f90  DGSEMClass.f90  ExplicitMethods.f90  FASMultigridClass.f90  GMRESClass.f90  GenericLinSolverClass.f90  HORSES3DMain.f90  Implicit_JF.f90  Implicit_NJ.f90  IterativeSolverClass.f90  JFNKClass.f90  LinearSolverClass.f90  MKLPardisoSolverClass.f90  Makefile  MultigridSolverClass.f90  PetscSolverClass.f90  SpatialDiscretization.f90  TimeIntegrator.f90  TruncationErrorClass.f90  main.f90  make.deps  pAdaptationClass.f90
Solver/src/CahnHilliardSolver/NonlinearMultigrid/: AnisFASMultigridClass.f90  FASMultigridClass.f90  MultigridTypes.f90
Solver/src/CahnHilliardSolver/include/: checkiftheversionisrequested__genmod.f90  checkinputintegrity__genmod.f90  displaysimulationstatistics__genmod.f90
Solver/src/Foundation/: Plotter.f90  SMConstants.f90  TimerClass.f90
Solver/src/Generic/: ProblemFile.f90  Setup.f90
Solver/src/Geometry/: MappedGeometry.f90
Solver/src/IO/: ReadInputFile.f90
Solver/src/IncompressibleNSSolver/: Makefile  SpatialDiscretization.f90  main.f90
Solver/src/IncompressibleNSSolver/include/: checkiftheversionisrequested__genmod.f90  checkinputintegrity__genmod.f90  displaysimulationstatistics__genmod.f90
Solver/src/Jacobian/: CSR_Matrices.f90  ColorsClass.f90
Solver/src/LinearSolvers/: MultigridSolverClass.f90
Solver/src/Mesh/: FaceClass.f90  HexElementConnectivityDefinitions.f90  HexMesh.f90  MeshTypes.f90  ZoneClass.f90
Solver/src/MultiphaseSolver/: Makefile  SpatialDiscretization.f90  main.f90
Solver/src/MultiphaseSolver/include/: checkiftheversionisrequested__genmod.f90  checkinputintegrity__genmod.f90  displaysimulationstatistics__genmod.f90
Solver/src/NSCHSolver/: HORSES3DMain.f90  Makefile  SpatialDiscretization.f90  main.f90
Solver/src/NavierStokesSolver/: AnalyticalJacobian.f90  CMakeLists.txt  DGInviscidDiscretization.f90  DGSEMClass.f90  DGViscousDiscretization.f90  DGWeakIntegrals.f90  ExplicitMethods.f90  FASMultigridClass.f90  HORSES3DMain.f90  Implicit_NJ.f90  IterativeSolverClass.f90  Makefile  MultigridSolverClass.f90  SpatialDiscretization.f90  TimeIntegrator.f90  TruncationErrorClass.f90  WallFunctionConnectivity.f90  main.f90  make.deps  pAdaptationClass.f90  split_template.f90
Solver/src/NavierStokesSolver/LinearSolvers/: GenericLinSolverClass.f90
Solver/src/NavierStokesSolver/NonlinearMultigrid/: AnisFASMultigridClass.f90  FASMultigridClass.f90  MultigridTypes.f90
Solver/src/NavierStokesSolver/include/: checkiftheversionisrequested__genmod.f90  checkinputintegrity__genmod.f90  displaysimulationstatistics__genmod.f90
Solver/src/NavierStokesSolverRANS/: Makefile  SpatialDiscretization.f90  main.f90
Solver/src/NavierStokesSolverRANS/include/: checkiftheversionisrequested__genmod.f90  checkinputintegrity__genmod.f90  displaysimulationstatistics__genmod.f90
Solver/src/Physics/: BoundaryConditions.f90  LiftAndDrag.f90  ManufacturedSolutions.f90  Physics.f90
Solver/src/ScalarSolver/: Makefile  SpatialDiscretization.f90  main.f90
Solver/src/ScalarSolver_INS_V04/: Makefile  SpatialDiscretization.f90  main.f90
Solver/src/addons/: CMakeLists.txt  horsesf90.in.cmake
Solver/src/addons/extractgeometry/: CMakeLists.txt  ConstructMeshAndSpectralBasis.f90  GeometryClass.f90  (+3 more)
Solver/src/iNSCHSolver/: Makefile  SpatialDiscretization.f90  main.f90
Solver/test/: Makefile.template
Solver/test/CahnHilliard/: Readme.txt
Solver/test/Components/: Makefile.components  Makefile.gradients  Makefile.gradients~master
Solver/test/Convergence_ins_V1_V3/: ConvergenceBDF.control  readConvergences001.py  run.sh  test01.txt
Solver/test/Defence_store/: WPFS_moving_store_IBM.control  WPFS_wing_pylon_smoke.control  WPFS_wing_pylon_v2.control  horses_temporal_file.txt  script.slurm
Solver/test/IncompressibleNS/: Readme.txt
Solver/test/MS/: .standard_100.out.swp  MSSA.control  MSSATo.control
Solver/test/Multiphase/: Readme.txt
Solver/test/NavierStokes/: Readme.txt
Solver/test/Particles/: Readme.txt
Solver/test/TestMeshes/: ActuatorBox.msh  BackwardFacingStep.msh  Box27.h5  Box27.mesh  BoxAroundCircle3D.mesh  BoxAroundCircle3D_extended_pol5.mesh  CubeWithSphere5.mesh  CylinderNSpol3.mesh  CylinderNSpol3_1elem_y.mesh  CylinderNSpol3_refined.mesh  CylinderNSpol3_very_refined.mesh  DiffuserMesh.mesh  DoubleMach.msh  FlatPlate3D.mesh  FlatPlate3D_1element.mesh  ForwardFacingStep.mesh  ForwardFacingStep_100x50.msh  ForwardFacingStep_50x25.msh  IBMCylinder.msh  IBMcylinder.msh  Ramp3D2.mesh  SingleCubeSkew.mesh  SingleRectCube.mesh  Star5MeshRot.mesh  TaylorGreen8.mesh  cylinder.msh
Solver/test/WPFS_prescribed_6DoF/: Postpro_surface.control  WPFS_moving_store_IBM.control  WPFS_store_block_pref.control  WPFS_wing_pylon_v2.control  script.slurm
Solver/test/WPFS_prescribed_6DoF_rl/: Postpro_volume.control  WPFS_moving_store_IBM.control  run.sh  script.slurm
Solver/tutorials/Additional_material/: Custom_mesh.geo
Solver/tutorials/Cylinder/: Cylinder.control  Cylinder_Re100.control  Tutorial_Cylinder.docx
Solver/tutorials/Wind_turbine/: Tutorial_Wind_Turbine.docx  actuator.control  wind_turbine.control
Solver/tutorials/mesh_gmesh/: Custom_mesh.geo
(+3240 files in other folders)
